parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    LBRACKET
    PERIOD
    RBRACKET

Grammar

Rule 0     S' -> Start
Rule 1     Start -> Stmts
Rule 2     Stmts -> Stmts TStmt
Rule 3     Stmts -> TStmt
Rule 4     TStmt -> Stmt
Rule 5     TStmt -> FuncDefStmt
Rule 6     Stmt -> CallStmt
Rule 7     Stmt -> DeclStmt
Rule 8     Stmt -> AssignStmt
Rule 9     Stmt -> IfStmt
Rule 10    Stmt -> WhileStmt
Rule 11    Stmt -> ForStmt
Rule 12    Block -> LBRACE BlockStmts ReturnStmt RBRACE
Rule 13    Block -> LBRACE BlockStmts RBRACE
Rule 14    Block -> LBRACE ReturnStmt RBRACE
Rule 15    BlockStmts -> BlockStmts BlockStmt
Rule 16    BlockStmts -> BlockStmt
Rule 17    BlockStmt -> Stmt
Rule 18    BlockStmt -> LoopControlStmt
Rule 19    Expr -> ArithExpr
Rule 20    FuncDefStmt -> FUNC NAME LPAREN ParamDecls RPAREN TypeSpec Block
Rule 21    FuncDefStmt -> FUNC NAME LPAREN ParamDecls RPAREN Block
Rule 22    FuncDefStmt -> FUNC NAME LPAREN RPAREN TypeSpec Block
Rule 23    FuncDefStmt -> FUNC NAME LPAREN RPAREN Block
Rule 24    ParamDecls -> ParamDecls COMMA NAME TypeSpec
Rule 25    ParamDecls -> NAME TypeSpec
Rule 26    BooleanExpr -> BooleanExpr OR OR AndExpr
Rule 27    BooleanExpr -> AndExpr
Rule 28    AndExpr -> AndExpr AND AND NotExpr
Rule 29    AndExpr -> NotExpr
Rule 30    NotExpr -> NOT BooleanTerm
Rule 31    NotExpr -> BooleanTerm
Rule 32    BooleanTerm -> CmpExpr
Rule 33    BooleanTerm -> BooleanConstant
Rule 34    BooleanTerm -> LPAREN BooleanExpr RPAREN
Rule 35    CmpExpr -> ArithExpr CmpOp ArithExpr
Rule 36    CmpOp -> LT
Rule 37    CmpOp -> LT EQUALS
Rule 38    CmpOp -> EQUALS EQUALS
Rule 39    CmpOp -> NOT EQUALS
Rule 40    CmpOp -> GT EQUALS
Rule 41    CmpOp -> GT
Rule 42    BooleanConstant -> TRUE
Rule 43    BooleanConstant -> FALSE
Rule 44    ArithExpr -> ArithExpr PLUS MulDiv
Rule 45    ArithExpr -> ArithExpr DASH MulDiv
Rule 46    ArithExpr -> MulDiv
Rule 47    MulDiv -> MulDiv STAR Negate
Rule 48    MulDiv -> MulDiv SLASH Negate
Rule 49    MulDiv -> MulDiv PERCENT Negate
Rule 50    MulDiv -> Negate
Rule 51    Negate -> DASH Atomic
Rule 52    Negate -> Atomic
Rule 53    Atomic -> ValueExpr
Rule 54    Atomic -> LPAREN ArithExpr RPAREN
Rule 55    ValueExpr -> Constant
Rule 56    ValueExpr -> SymbolValueExpr
Rule 57    Constant -> INT_CONST
Rule 58    Constant -> FLOAT_CONST
Rule 59    Constant -> STRING_CONST
Rule 60    SymbolValueExpr -> Call
Rule 61    SymbolValueExpr -> NAME
Rule 62    CallStmt -> Call
Rule 63    Call -> NAME LPAREN CallParams RPAREN
Rule 64    Call -> NAME LPAREN RPAREN
Rule 65    CallParams -> CallParams COMMA Expr
Rule 66    CallParams -> Expr
Rule 67    DeclStmt -> VAR NAME TypeSpec EQUALS Expr
Rule 68    DeclStmt -> VAR NAME TypeSpec
Rule 69    DeclStmt -> VAR NAME EQUALS Expr
Rule 70    TypeName -> NAME
Rule 71    TypeSpec -> TypeName
Rule 72    AssignStmt -> NAME EQUALS Expr
Rule 73    IfStmt -> IF BooleanExpr Block ElseIfStmt
Rule 74    IfStmt -> IF BooleanExpr Block
Rule 75    ElseIfStmt -> ELSE Block
Rule 76    ElseIfStmt -> ELSE IfStmt
Rule 77    WhileStmt -> WHILE BooleanExpr Block
Rule 78    WhileStmt -> WHILE Block
Rule 79    ForStmt -> FOR DeclStmt SEMIC BooleanExpr SEMIC AssignStmt Block
Rule 80    ForStmt -> FOR SEMIC BooleanExpr SEMIC AssignStmt Block
Rule 81    ForStmt -> FOR DeclStmt SEMIC SEMIC AssignStmt Block
Rule 82    ForStmt -> FOR DeclStmt SEMIC BooleanExpr SEMIC Block
Rule 83    ForStmt -> FOR SEMIC SEMIC AssignStmt Block
Rule 84    ForStmt -> FOR SEMIC BooleanExpr SEMIC Block
Rule 85    ForStmt -> FOR DeclStmt SEMIC SEMIC Block
Rule 86    ReturnStmt -> RETURN
Rule 87    ReturnStmt -> RETURN Expr
Rule 88    LoopControlStmt -> CONTINUE
Rule 89    LoopControlStmt -> BREAK

Terminals, with rules where they appear

AND                  : 28 28
BREAK                : 89
COMMA                : 24 65
CONTINUE             : 88
DASH                 : 45 51
ELSE                 : 75 76
EQUALS               : 37 38 38 39 40 67 69 72
FALSE                : 43
FLOAT_CONST          : 58
FOR                  : 79 80 81 82 83 84 85
FUNC                 : 20 21 22 23
GT                   : 40 41
IF                   : 73 74
INT_CONST            : 57
LBRACE               : 12 13 14
LBRACKET             : 
LPAREN               : 20 21 22 23 34 54 63 64
LT                   : 36 37
NAME                 : 20 21 22 23 24 25 61 63 64 67 68 69 70 72
NOT                  : 30 39
OR                   : 26 26
PERCENT              : 49
PERIOD               : 
PLUS                 : 44
RBRACE               : 12 13 14
RBRACKET             : 
RETURN               : 86 87
RPAREN               : 20 21 22 23 34 54 63 64
SEMIC                : 79 79 80 80 81 81 82 82 83 83 84 84 85 85
SLASH                : 48
STAR                 : 47
STRING_CONST         : 59
TRUE                 : 42
VAR                  : 67 68 69
WHILE                : 77 78
error                : 

Nonterminals, with rules where they appear

AndExpr              : 26 27 28
ArithExpr            : 19 35 35 44 45 54
AssignStmt           : 8 79 80 81 83
Atomic               : 51 52
Block                : 20 21 22 23 73 74 75 77 78 79 80 81 82 83 84 85
BlockStmt            : 15 16
BlockStmts           : 12 13 15
BooleanConstant      : 33
BooleanExpr          : 26 34 73 74 77 79 80 82 84
BooleanTerm          : 30 31
Call                 : 60 62
CallParams           : 63 65
CallStmt             : 6
CmpExpr              : 32
CmpOp                : 35
Constant             : 55
DeclStmt             : 7 79 81 82 85
ElseIfStmt           : 73
Expr                 : 65 66 67 69 72 87
ForStmt              : 11
FuncDefStmt          : 5
IfStmt               : 9 76
LoopControlStmt      : 18
MulDiv               : 44 45 46 47 48 49
Negate               : 47 48 49 50
NotExpr              : 28 29
ParamDecls           : 20 21 24
ReturnStmt           : 12 14
Start                : 0
Stmt                 : 4 17
Stmts                : 1 2
SymbolValueExpr      : 56
TStmt                : 2 3
TypeName             : 71
TypeSpec             : 20 22 24 25 67 68
ValueExpr            : 53
WhileStmt            : 10

Parsing method: LALR

state 0

    (0) S' -> . Start
    (1) Start -> . Stmts
    (2) Stmts -> . Stmts TStmt
    (3) Stmts -> . TStmt
    (4) TStmt -> . Stmt
    (5) TStmt -> . FuncDefStmt
    (6) Stmt -> . CallStmt
    (7) Stmt -> . DeclStmt
    (8) Stmt -> . AssignStmt
    (9) Stmt -> . IfStmt
    (10) Stmt -> . WhileStmt
    (11) Stmt -> . ForStmt
    (20) FuncDefStmt -> . FUNC NAME LPAREN ParamDecls RPAREN TypeSpec Block
    (21) FuncDefStmt -> . FUNC NAME LPAREN ParamDecls RPAREN Block
    (22) FuncDefStmt -> . FUNC NAME LPAREN RPAREN TypeSpec Block
    (23) FuncDefStmt -> . FUNC NAME LPAREN RPAREN Block
    (62) CallStmt -> . Call
    (67) DeclStmt -> . VAR NAME TypeSpec EQUALS Expr
    (68) DeclStmt -> . VAR NAME TypeSpec
    (69) DeclStmt -> . VAR NAME EQUALS Expr
    (72) AssignStmt -> . NAME EQUALS Expr
    (73) IfStmt -> . IF BooleanExpr Block ElseIfStmt
    (74) IfStmt -> . IF BooleanExpr Block
    (77) WhileStmt -> . WHILE BooleanExpr Block
    (78) WhileStmt -> . WHILE Block
    (79) ForStmt -> . FOR DeclStmt SEMIC BooleanExpr SEMIC AssignStmt Block
    (80) ForStmt -> . FOR SEMIC BooleanExpr SEMIC AssignStmt Block
    (81) ForStmt -> . FOR DeclStmt SEMIC SEMIC AssignStmt Block
    (82) ForStmt -> . FOR DeclStmt SEMIC BooleanExpr SEMIC Block
    (83) ForStmt -> . FOR SEMIC SEMIC AssignStmt Block
    (84) ForStmt -> . FOR SEMIC BooleanExpr SEMIC Block
    (85) ForStmt -> . FOR DeclStmt SEMIC SEMIC Block
    (63) Call -> . NAME LPAREN CallParams RPAREN
    (64) Call -> . NAME LPAREN RPAREN

    FUNC            shift and go to state 12
    VAR             shift and go to state 13
    NAME            shift and go to state 16
    IF              shift and go to state 14
    WHILE           shift and go to state 17
    FOR             shift and go to state 10

    TStmt                          shift and go to state 15
    Stmts                          shift and go to state 1
    Call                           shift and go to state 5
    Stmt                           shift and go to state 9
    AssignStmt                     shift and go to state 2
    WhileStmt                      shift and go to state 11
    Start                          shift and go to state 3
    CallStmt                       shift and go to state 4
    ForStmt                        shift and go to state 18
    FuncDefStmt                    shift and go to state 6
    IfStmt                         shift and go to state 7
    DeclStmt                       shift and go to state 8

state 1

    (1) Start -> Stmts .
    (2) Stmts -> Stmts . TStmt
    (4) TStmt -> . Stmt
    (5) TStmt -> . FuncDefStmt
    (6) Stmt -> . CallStmt
    (7) Stmt -> . DeclStmt
    (8) Stmt -> . AssignStmt
    (9) Stmt -> . IfStmt
    (10) Stmt -> . WhileStmt
    (11) Stmt -> . ForStmt
    (20) FuncDefStmt -> . FUNC NAME LPAREN ParamDecls RPAREN TypeSpec Block
    (21) FuncDefStmt -> . FUNC NAME LPAREN ParamDecls RPAREN Block
    (22) FuncDefStmt -> . FUNC NAME LPAREN RPAREN TypeSpec Block
    (23) FuncDefStmt -> . FUNC NAME LPAREN RPAREN Block
    (62) CallStmt -> . Call
    (67) DeclStmt -> . VAR NAME TypeSpec EQUALS Expr
    (68) DeclStmt -> . VAR NAME TypeSpec
    (69) DeclStmt -> . VAR NAME EQUALS Expr
    (72) AssignStmt -> . NAME EQUALS Expr
    (73) IfStmt -> . IF BooleanExpr Block ElseIfStmt
    (74) IfStmt -> . IF BooleanExpr Block
    (77) WhileStmt -> . WHILE BooleanExpr Block
    (78) WhileStmt -> . WHILE Block
    (79) ForStmt -> . FOR DeclStmt SEMIC BooleanExpr SEMIC AssignStmt Block
    (80) ForStmt -> . FOR SEMIC BooleanExpr SEMIC AssignStmt Block
    (81) ForStmt -> . FOR DeclStmt SEMIC SEMIC AssignStmt Block
    (82) ForStmt -> . FOR DeclStmt SEMIC BooleanExpr SEMIC Block
    (83) ForStmt -> . FOR SEMIC SEMIC AssignStmt Block
    (84) ForStmt -> . FOR SEMIC BooleanExpr SEMIC Block
    (85) ForStmt -> . FOR DeclStmt SEMIC SEMIC Block
    (63) Call -> . NAME LPAREN CallParams RPAREN
    (64) Call -> . NAME LPAREN RPAREN

    $end            reduce using rule 1 (Start -> Stmts .)
    FUNC            shift and go to state 12
    VAR             shift and go to state 13
    NAME            shift and go to state 16
    IF              shift and go to state 14
    WHILE           shift and go to state 17
    FOR             shift and go to state 10

    TStmt                          shift and go to state 19
    Call                           shift and go to state 5
    Stmt                           shift and go to state 9
    AssignStmt                     shift and go to state 2
    WhileStmt                      shift and go to state 11
    CallStmt                       shift and go to state 4
    ForStmt                        shift and go to state 18
    FuncDefStmt                    shift and go to state 6
    IfStmt                         shift and go to state 7
    DeclStmt                       shift and go to state 8

state 2

    (8) Stmt -> AssignStmt .

    RBRACE          reduce using rule 8 (Stmt -> AssignStmt .)
    RETURN          reduce using rule 8 (Stmt -> AssignStmt .)
    CONTINUE        reduce using rule 8 (Stmt -> AssignStmt .)
    BREAK           reduce using rule 8 (Stmt -> AssignStmt .)
    VAR             reduce using rule 8 (Stmt -> AssignStmt .)
    NAME            reduce using rule 8 (Stmt -> AssignStmt .)
    IF              reduce using rule 8 (Stmt -> AssignStmt .)
    WHILE           reduce using rule 8 (Stmt -> AssignStmt .)
    FOR             reduce using rule 8 (Stmt -> AssignStmt .)
    FUNC            reduce using rule 8 (Stmt -> AssignStmt .)
    $end            reduce using rule 8 (Stmt -> AssignStmt .)


state 3

    (0) S' -> Start .



state 4

    (6) Stmt -> CallStmt .

    RBRACE          reduce using rule 6 (Stmt -> CallStmt .)
    RETURN          reduce using rule 6 (Stmt -> CallStmt .)
    CONTINUE        reduce using rule 6 (Stmt -> CallStmt .)
    BREAK           reduce using rule 6 (Stmt -> CallStmt .)
    VAR             reduce using rule 6 (Stmt -> CallStmt .)
    NAME            reduce using rule 6 (Stmt -> CallStmt .)
    IF              reduce using rule 6 (Stmt -> CallStmt .)
    WHILE           reduce using rule 6 (Stmt -> CallStmt .)
    FOR             reduce using rule 6 (Stmt -> CallStmt .)
    FUNC            reduce using rule 6 (Stmt -> CallStmt .)
    $end            reduce using rule 6 (Stmt -> CallStmt .)


state 5

    (62) CallStmt -> Call .

    FUNC            reduce using rule 62 (CallStmt -> Call .)
    VAR             reduce using rule 62 (CallStmt -> Call .)
    NAME            reduce using rule 62 (CallStmt -> Call .)
    IF              reduce using rule 62 (CallStmt -> Call .)
    WHILE           reduce using rule 62 (CallStmt -> Call .)
    FOR             reduce using rule 62 (CallStmt -> Call .)
    $end            reduce using rule 62 (CallStmt -> Call .)
    RBRACE          reduce using rule 62 (CallStmt -> Call .)
    RETURN          reduce using rule 62 (CallStmt -> Call .)
    CONTINUE        reduce using rule 62 (CallStmt -> Call .)
    BREAK           reduce using rule 62 (CallStmt -> Call .)


state 6

    (5) TStmt -> FuncDefStmt .

    FUNC            reduce using rule 5 (TStmt -> FuncDefStmt .)
    VAR             reduce using rule 5 (TStmt -> FuncDefStmt .)
    NAME            reduce using rule 5 (TStmt -> FuncDefStmt .)
    IF              reduce using rule 5 (TStmt -> FuncDefStmt .)
    WHILE           reduce using rule 5 (TStmt -> FuncDefStmt .)
    FOR             reduce using rule 5 (TStmt -> FuncDefStmt .)
    $end            reduce using rule 5 (TStmt -> FuncDefStmt .)


state 7

    (9) Stmt -> IfStmt .

    RBRACE          reduce using rule 9 (Stmt -> IfStmt .)
    RETURN          reduce using rule 9 (Stmt -> IfStmt .)
    CONTINUE        reduce using rule 9 (Stmt -> IfStmt .)
    BREAK           reduce using rule 9 (Stmt -> IfStmt .)
    VAR             reduce using rule 9 (Stmt -> IfStmt .)
    NAME            reduce using rule 9 (Stmt -> IfStmt .)
    IF              reduce using rule 9 (Stmt -> IfStmt .)
    WHILE           reduce using rule 9 (Stmt -> IfStmt .)
    FOR             reduce using rule 9 (Stmt -> IfStmt .)
    FUNC            reduce using rule 9 (Stmt -> IfStmt .)
    $end            reduce using rule 9 (Stmt -> IfStmt .)


state 8

    (7) Stmt -> DeclStmt .

    RBRACE          reduce using rule 7 (Stmt -> DeclStmt .)
    RETURN          reduce using rule 7 (Stmt -> DeclStmt .)
    CONTINUE        reduce using rule 7 (Stmt -> DeclStmt .)
    BREAK           reduce using rule 7 (Stmt -> DeclStmt .)
    VAR             reduce using rule 7 (Stmt -> DeclStmt .)
    NAME            reduce using rule 7 (Stmt -> DeclStmt .)
    IF              reduce using rule 7 (Stmt -> DeclStmt .)
    WHILE           reduce using rule 7 (Stmt -> DeclStmt .)
    FOR             reduce using rule 7 (Stmt -> DeclStmt .)
    FUNC            reduce using rule 7 (Stmt -> DeclStmt .)
    $end            reduce using rule 7 (Stmt -> DeclStmt .)


state 9

    (4) TStmt -> Stmt .

    FUNC            reduce using rule 4 (TStmt -> Stmt .)
    VAR             reduce using rule 4 (TStmt -> Stmt .)
    NAME            reduce using rule 4 (TStmt -> Stmt .)
    IF              reduce using rule 4 (TStmt -> Stmt .)
    WHILE           reduce using rule 4 (TStmt -> Stmt .)
    FOR             reduce using rule 4 (TStmt -> Stmt .)
    $end            reduce using rule 4 (TStmt -> Stmt .)


state 10
